added call slot booking feature and banner domain
