# backend/internal/banner/model.go
@@ -1,0 +1,10 @@
+package banner
+
+import "time"
+
+type BannerItem struct {
+	ID        uint
+	ProductID string
+	Position  int
+	UpdatedAt time.Time
+}
